# capstone

./: .gitignore  NEXT_STEPS.md  README.md  docker-compose.yml
scripts/: verify_ingestion.py
sdk/javascript/: package-lock.json  package.json
sdk/javascript/src/: client.js  index.js  models.js
sdk/javascript/src/interceptors/: anthropic.js  openai.js
sdk/javascript/tests/: sdk.test.js
sdk/python/: pyproject.toml
sdk/python/observeai/: __init__.py  client.py  config.py  models.py
sdk/python/observeai/interceptors/: anthropic_interceptor.py  openai_interceptor.py
sdk/python/tests/: test_sdk.py
services/api-gateway/: Dockerfile  go.mod  main.go
services/api-gateway/config/: config.go
services/api-gateway/handlers/: health.go  ingest.go  ingest_test.go
services/api-gateway/middleware/: auth.go  ratelimit.go
services/ingest-api/: requirements.txt
services/ingest-api/app/: __init__.py  auth.py  config.py  kafka_producer.py  main.py  models.py
services/ingest-api/tests/: __init__.py  test_ingest.py
services/kafka-consumer/: Dockerfile  clickhouse_client.py  config.py  main.py  requirements.txt
