[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observeai-sdk"
version = "0.1.0"
description = "Python SDK for ObserveAI LLM Observability Platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["observeai*"]
